# DBX_FCS

./: .gitignore  README.md
Control System 3copter/: Model_sim_creation.m  Run3Copter.m  SetupComplete.m  TO_curve.mat  TO_curve_raw.mat  TTO_map.mat  TTO_raw_data.mat  Tricopter_Controlled.slx  runfg.bat
Modelo Aerosonde/: aerosonde_controlled.mdl  aerosonde_data.m  aerosonde_initialize.m  aerosonde_trim.mdl  aerosonde_trimlin.m  aerosonde_uncontrolled.mdl  readme.txt
Modelo CFD DroneBoX/: BodyAxes2WindAxes.m  Custom_Fit.m  (+15 more)
tools/MAVLink2Simulink_UDP/: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  MAVLink_Block.mdl  Mavlink.cmake  README.md  autocompile.m  example.slx  main.cpp  matrixDivideComplex.c  matrixDivideComplex.mexw64  mav2simulink.cpp  test.slx  udp_mavlink_rec.cpp
tools/MAVLink2Simulink_UDP/upd_mavlink_VS2010/: mav2simulink.cpp  udp_mavlink_rec.cpp  udp_mavlink_rec.hpp  upd_mavlink.sln
tools/MAVLink2Simulink_UDP/upd_mavlink_VS2010/upd_mavlink/: udp_mavlink.def  upd_mavlink.vcxproj  upd_mavlink.vcxproj.filters
tools/MAVLink2Simulink_UDP/upd_mavlink_VS2010/upd_mavlink/include/mavlink/common/: common.h  version.h
tools/MAVLink2Simulink_UDP/upd_mavlink_VS2010/upd_mavlink/x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  upd_mavlink.lastbuildstate  upd_mavlink.write.1.tlog  vc100.idb
tools/MAVLink2Simulink_UDP/upd_mavlink_VS2010/x64/Debug/: upd_mavlink.exp  upd_mavlink.ilk  upd_mavlink.lib  upd_mavlink.mexw64
(+535 files in other folders)
